--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/TEDFFmpeg.jar
+dist.jar=${dist.dir}/ParseTED.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jsoup-1.9.2.jar=lib/jsoup-1.9.2.jar
